--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "animate.css": "^4.1.1",
     "antd": "^5.8.2",
     "axios": "^1.4.0",
     "react": "^18.2.0",
